# slp-poly

./: .gitignore  .gitmodules  README.md
src/: .bazelrc  .clang-format  BUILD  CMakeLists.txt  ReturnValue.yaml  WORKSPACE  main.cpp
src/algebra/: BUILD  PartialPolynomial.cpp  PartialPolynomial.h  PartialPolynomial.t.cpp  Polynomial-impl.h  Polynomial.cpp  Polynomial.h
src/complexity/: AlgEnum.yaml  BUILD  Equation.cpp  Equation.h  Estimator.cpp  Estimator.h  Perf.cpp  Perf.h  Perf.t.cpp  PerfAlg.h  Tracker.cpp  Tracker.h
src/context/: Assignment.h  BUILD  Determinant.h  Function.h  FunctionEnum.yaml  Id.h  Integer.h  InterpContext.h  Matrix.h  NamedValue.h  Negation.h  Power.h  Printer.cpp  Printer.h  Processor.h  Product.h  RealNumber.h  Statement.h  String.h  Sum.h  Table.h  Value.h  ValueList.cpp  ValueList.h  context.h
src/context/maple/: BUILD  Driver.cpp  Driver.h  Parser.yy  Scanner.h  Scanner.ll
src/eval/: BUILD  CodeGenerator-Impl.h  CodeGenerator.h  Evaluator.h  Instruction.h  InstructionEnum.yaml  UnivEvaluator.h
src/eval/util/: BUILD  CodeAnnotation.h  DataAllocator.h  InstructionCounter.h  InstructionMaxDegree.h  InstructionPrinter.h
src/interp/: BUILD  Interpolator-impl.h  Interpolator.cpp  Interpolator.h  Newton.h  Newton.t.cpp  PrunningEnum.yaml  UnivInterpEnum.yaml  VandSolveTypeEnum.yaml  VandSolverFactory-impl.h  VandSolverFactory.cpp  VandSolverFactory.h  VarOrderEnum.yaml
src/math/: BUILD  Base.h  Base.t.cpp  Field.t.cpp  Prime.t.cpp  Vandermonde.t.cpp  modular-x86.t.cpp
src/math/fft/: BUILD  algorithm-impl.h  algorithm.cpp  algorithm.h
src/math/field/: BUILD  CRT-Impl.h  CRT.h  CRT2-Impl.h  CRT2.h  Field-Impl.h  Field.h  Field_uint-Impl.h  Field_uint.h  Field_uint2x-Impl.h  Field_uint2x.h  Field_uint2x32-Impl.h  Field_uint2x32.h
src/math/numeric/: BUILD  svd.cpp  svd.h
src/math/util/: BUILD  modular-x86.h  prime.cpp  prime.h  random.h  static.h
src/math/vandermonde/: BUILD  FFTSolver-Impl.h  FFTSolver.h  QuadSolver-Impl.h  QuadSolver.h  Solver.h
src/operation/eval/: BUILD  benchmark.h
src/operation/field/: BUILD  FieldOperations.h  Operation.h  benchmark.h  setup.h
src/platform/: BUILD  BuildInfo.cpp  BuildInfo.h  Platform.cpp  Platform.cpp.in  Platform.h
src/run/: A32.cpp  A64.cpp  AB32.cpp  AB64.cpp  AC32.cpp  AC64.cpp  B32.cpp  B64.cpp  BC32.cpp  BC64.cpp  BUILD  C32.cpp  C64.cpp  CRT32.cpp  CRT64.cpp  Dynamic32.cpp  Dynamic64.cpp  FieldBenchmarks.cpp  FieldBenchmarks.h  Interpolation.cpp  Interpolation.h
src/runprofile/: ActionEnum.yaml  BUILD  FieldOptionEnum.yaml  InterpProfile.cpp  InterpProfile.h  InterpProfile.t.cpp  RunProfile.cpp  RunProfile.h  RunProfile.t.cpp  util.h
src/try_out/: BUILD  README.md  csci6335-example.slp  csci6335-example.slp.asm  csci6335-simple.slp  csci6335-simple.slp.asm  slp_poly_test.py
src/util/: BUILD  LevelEnum.yaml  LogLevelEnum.yaml  LogModuleEnum.yaml  LogTagEnum.yaml  MultiIndexMap.cpp  MultiIndexMap.h  MultiIndexMap.t.cpp  SmartAssert.cpp  SmartAssert.h  Timer.cpp  Timer.h  log.cpp  log.h
(+7 files in other folders)
