CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(slp-poly)

ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

FIND_PACKAGE(Boost COMPONENTS system thread log REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_EXECUTABLE(slp-poly main.cpp)

TARGET_LINK_LIBRARIES(slp-poly ${Boost_LIBRARIES} )

MESSAGE(STATUS)
MESSAGE(STATUS "Boost Version = ${Boost_VERSION}")
MESSAGE(STATUS "Boost Include = ${Boost_INCLUDE_DIRS}")
MESSAGE(STATUS "Boost Libs = ${Boost_LIBRARIES}")